--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 	<head>
-		<title>A title!</title>
+		<title>Shuffy's Tools</title>
 	</head>
 	<body>
-		<h1>Hello world!</h1>
+		<h1>Shuffy's Tools</h1>
+		<a href="https://shuffyiosys.github.io/arknights-cookbook/">Arknights Cookbook</a>: A tool to keep tabs on character development for <a href="https://www.arknights.global/">Arknights</a>
+		<a href="https://shuffyiosys.github.io/ffxiv-gathering-tracker/">Final Fantasy XIV Gathering Tracker:</a> Pick gathering nodes and get notified before they pop. For <a href="https://www.finalfantasyxiv.com/" title="The critically acclaimed MMO">Final Fantasy XIV</a>
 	</body>
 </html>
