Styling and formatting
Making the page pretty

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<html>
-	<head>
-		<title>Shuffy's Tools</title>
-	</head>
-	<body>
-		<h1>Shuffy's Tools</h1>
-		<a href="https://shuffyiosys.github.io/arknights-cookbook/">Arknights Cookbook</a>: A tool to keep tabs on character development for <a href="https://www.arknights.global/">Arknights</a>
-		<a href="https://shuffyiosys.github.io/ffxiv-gathering-tracker/">Final Fantasy XIV Gathering Tracker:</a> Pick gathering nodes and get notified before they pop. For <a href="https://www.finalfantasyxiv.com/" title="The critically acclaimed MMO">Final Fantasy XIV</a>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="index.css">
+	<title>Shuffy's Tools</title>
+</head>
+<body>
+	<h1>Shuffy's Tools</h1>
+	<a href="https://shuffyiosys.github.io/arknights-cookbook/">Arknights Cookbook</a><br>
+	A tool to keep tabs on character development for <a href="https://www.arknights.global/">Arknights</a>
+	<br><br>
+	<a href="https://shuffyiosys.github.io/ffxiv-gathering-tracker/">Final Fantasy XIV Gathering Tracker</a><br>
+	Pick gathering nodes and get notified before they pop. For <a href="https://www.finalfantasyxiv.com/" title="The critically acclaimed MMO">Final Fantasy XIV</a>
+</body>
 </html>
